--- a/QuickShop/.classpath
+++ b/QuickShop/.classpath
@@ -2,15 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="F:/lib/craftbukkit-1.5.2-R0.1.jar"/>
-	<classpathentry kind="lib" path="F:/lib/Vault.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://mythcraft.dyndns.org/javadoc/vault/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="F:/lib/Herochat.jar"/>
-	<classpathentry kind="lib" path="F:/lib/Satoshis.jar"/>
-	<classpathentry kind="lib" path="F:/lib/SpoutPlugin.jar"/>
-	<classpathentry kind="lib" path="F:/lib/Spout.jar"/>
+	<classpathentry kind="lib" path="H:/Plugins/bukkit-1.6.4-R2.0.jar"/>
+	<classpathentry kind="lib" path="H:/Plugins/HeroChat.jar"/>
+	<classpathentry kind="lib" path="H:/Plugins/Satoshis-1.2.jar"/>
+	<classpathentry kind="lib" path="H:/Plugins/spoutcraftplugin-1.6.2-b1.jar"/>
+	<classpathentry kind="lib" path="H:/Plugins/SpoutPlugin.jar"/>
+	<classpathentry kind="lib" path="H:/server/plugins/Vault.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
