--- a/QuickShop/.classpath
+++ b/QuickShop/.classpath
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="H:/Plugins/bukkit-1.6.4-R2.0.jar"/>
 	<classpathentry kind="lib" path="H:/Plugins/HeroChat.jar"/>
 	<classpathentry kind="lib" path="H:/Plugins/Satoshis-1.2.jar"/>
 	<classpathentry kind="lib" path="H:/Plugins/spoutcraftplugin-1.6.2-b1.jar"/>
 	<classpathentry kind="lib" path="H:/Plugins/SpoutPlugin.jar"/>
 	<classpathentry kind="lib" path="H:/server/plugins/Vault.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
