--- a/QuickShop/.project
+++ b/QuickShop/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>QuickShop</name>
+	<name>QuickShopMW</name>
 	<comment></comment>
 	<projects>
 	</projects>
